testing a fix of pictures not showing on git pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ dl, ol, ul {
 /*--------------------------------------------Home*/
 
 .home-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/assets/images/stonehenge.jpeg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("assets/images/stonehenge.jpeg");
     height: 600px;
     width: 100%;
     animation-name: hero-zoom;
@@ -129,7 +129,7 @@ dl, ol, ul {
 /*--------------------------------------------Locations*/
 
 .locations-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/assets/images/durdledoor.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("assets/images/durdledoor.jpg");
     height: 600px;
     width: 100%;
     animation-name: hero-zoom;
@@ -152,7 +152,7 @@ dl, ol, ul {
 /*--------------------------------------------Contact*/
 
 .contact-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/assets/images/contact-background.JPEG");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("assets/images/spyway.jpg");
     height: 600px;
     width: 100%;
     animation-name: hero-zoom;
